examples/c/error-codes/undefined/UB-CEE5-bad-static.output
UB-CEE5-bad-static.c:4:7: error: incomplete type 'struct foo' where a complete type is required
      x;
      ^
UB-CEE5-bad-static.c:1:15: note: forward declaration of 'struct foo'
extern struct foo x;
              ^
UB-CEE5-bad-static.c:4:7: warning: expression result unused [-Wunused-value]
      x;
      ^
1 warning and 1 error generated.
